did some groupby

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -704,10 +704,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age    gender\n",
+       "16-25  female    1027\n",
+       "       male       978\n",
+       "26-39  male      1547\n",
+       "       female    1515\n",
+       "40-64  female    1466\n",
+       "       male      1465\n",
+       "65+    female     995\n",
+       "       male       995\n",
+       "Name: gender, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(df['age']).gender.value_counts()"
+   ]
   },
   {
    "cell_type": "code",
@@ -743,7 +765,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(df['age']).vehicle_type.value_counts()"
+   ]
   },
   {
    "cell_type": "code",
